# BabyBehave

./: .clang-tidy  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  MODULE.bazel  README.md  conanfile.py
.github/badges/: build.json  coverage.json
.github/workflows/: ci.yml
cmake/: BabyBehaveConfig.cmake.in  check_coverage_threshold.cmake  coverage_report.cmake
docs/: configuration.md
docs/design/: gherkin-support.md
examples/: AlarmClock.cpp  CMakeLists.txt  Calculator.cpp  Failing.cpp  FlightBooking.cpp  GherkinAdvanced.cpp  GherkinBackground.cpp  GherkinBasket.cpp  GherkinCollectFailures.cpp  GherkinMultiThreaded.cpp  GherkinTagsAndHooks.cpp  GherkinUnmatchedStep.cpp  Matchers.cpp  MultiThreaded.cpp  NoShortMacros.cpp  Oven.cpp
examples/gherkin/: BakerySteps.hpp  GherkinAdvanced.cpp  GherkinBakeryAllergenSubstitution.cpp  GherkinBakeryBulkOrderItemized.cpp  GherkinBakeryConcurrentOrderProcessing.cpp  GherkinBakeryDailyOvenLifecycle.cpp  GherkinBakeryFlakyOvenSensorRetry.cpp  GherkinBakeryLateCancellation.cpp  GherkinBakerySeasonalDiscountTiers.cpp  GherkinBakerySequentialFeatures.cpp  GherkinBakeryStandardOrder.cpp  GherkinCollectFailures.cpp  GherkinCustomFailureHandler.cpp  GherkinLibraryBookReviewSubmission.cpp  GherkinLibraryConcurrentLending.cpp  GherkinLibraryHoldPickupDeadline.cpp  GherkinLibraryHoldsAndReservations.cpp  GherkinLibraryOverdueFines.cpp  GherkinLibraryPriorityPatronHandling.cpp  GherkinLibraryStandardLending.cpp  GherkinMultiThreaded.cpp  GherkinPlaceholders.cpp  GherkinUnmatchedStep.cpp  GherkinVeryAdvanced.cpp  LibrarySteps.hpp  LoadFeatureFile.hpp
examples/gherkin/features/: bakery_allergen_substitution.feature  bakery_bulk_order_itemized.feature  bakery_concurrent_order_processing.feature  bakery_daily_oven_lifecycle.feature  bakery_flaky_oven_sensor_retry.feature  bakery_late_cancellation.feature  bakery_seasonal_discount_tiers.feature  bakery_standard_order.feature  concurrent_branch_0.feature  concurrent_branch_1.feature  concurrent_branch_2.feature  concurrent_branch_3.feature  library_book_review_submission.feature  library_hold_pickup_deadline.feature  library_holds_and_reservations.feature  library_overdue_fines.feature  library_priority_patron_handling.feature  library_standard_lending.feature
include/BabyBehave/: bdd.hpp  matchers.hpp  reporters.hpp
ports/babybehave/: portfile.cmake  vcpkg.json
scripts/: build.sh  coverage.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_BabyBehaveTest.cpp  test_BabyBehaveTest_CallbacksAndDeathTests.cpp  test_BabyBehaveTest_Exceptions.cpp  test_BabyBehaveTest_NoSourceLocation.cpp  test_BabyBehaveTest_SoftCheckAndCollectFailures.cpp  test_BabyBehaveTest_StepTypes.cpp  test_Gherkin_Integration.cpp  test_Gherkin_Parser.cpp  test_Testcontext.cpp
tests/bdd/: CMakeLists.txt  SelfTestDiagnostics.hpp  test_SelfTest.cpp  test_SelfTest_DefaultConditionExit.cpp  test_SelfTest_DefaultExceptionExit.cpp  test_SelfTest_ExceptionCoverage.cpp  test_SelfTest_Gherkin.cpp  test_SelfTest_Gherkin_DefaultFailureExit.cpp  test_SelfTest_NoSourceLocation.cpp
