cmake_minimum_required(VERSION 3.20)

project(BabyBehaveExamples VERSION 1.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(example_AlarmClock AlarmClock.cpp)
target_link_libraries(example_AlarmClock PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_Calculator Calculator.cpp)
target_link_libraries(example_Calculator PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_Failing Failing.cpp)
target_link_libraries(example_Failing PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_FlightBooking FlightBooking.cpp)
target_link_libraries(example_FlightBooking PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_Oven Oven.cpp)
target_link_libraries(example_Oven PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_NoShortMacros NoShortMacros.cpp)
target_link_libraries(example_NoShortMacros PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_Matchers Matchers.cpp)
target_link_libraries(example_Matchers PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

find_package(Threads REQUIRED)
add_executable(example_MultiThreaded MultiThreaded.cpp)
target_link_libraries(example_MultiThreaded PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags Threads::Threads)

# Gherkin examples (require BABYBEHAVE_ENABLE_GHERKIN)
add_executable(example_GherkinBasket GherkinBasket.cpp)
target_link_libraries(example_GherkinBasket PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinBackground GherkinBackground.cpp)
target_link_libraries(example_GherkinBackground PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinTagsAndHooks GherkinTagsAndHooks.cpp)
target_link_libraries(example_GherkinTagsAndHooks PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinUnmatchedStep GherkinUnmatchedStep.cpp)
target_link_libraries(example_GherkinUnmatchedStep PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinCollectFailures GherkinCollectFailures.cpp)
target_link_libraries(example_GherkinCollectFailures PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinPlaceholders GherkinPlaceholders.cpp)
target_link_libraries(example_GherkinPlaceholders PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinMultiThreaded GherkinMultiThreaded.cpp)
target_link_libraries(example_GherkinMultiThreaded PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags Threads::Threads)

add_executable(example_GherkinAdvanced GherkinAdvanced.cpp)
target_link_libraries(example_GherkinAdvanced PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinVeryAdvanced GherkinVeryAdvanced.cpp)
target_link_libraries(example_GherkinVeryAdvanced PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinCustomFailureHandler GherkinCustomFailureHandler.cpp)
target_link_libraries(example_GherkinCustomFailureHandler PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)