cmake_minimum_required(VERSION 3.20)

project(BabyBehaveExamples VERSION 1.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(example_AlarmClock AlarmClock.cpp)
target_link_libraries(example_AlarmClock PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_Calculator Calculator.cpp)
target_link_libraries(example_Calculator PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_Failing Failing.cpp)
target_link_libraries(example_Failing PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_FlightBooking FlightBooking.cpp)
target_link_libraries(example_FlightBooking PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_Oven Oven.cpp)
target_link_libraries(example_Oven PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_NoShortMacros NoShortMacros.cpp)
target_link_libraries(example_NoShortMacros PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_Matchers Matchers.cpp)
target_link_libraries(example_Matchers PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

find_package(Threads REQUIRED)
add_executable(example_MultiThreaded MultiThreaded.cpp)
target_link_libraries(example_MultiThreaded PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags Threads::Threads)

# Gherkin examples (require BABYBEHAVE_ENABLE_GHERKIN)
add_executable(example_GherkinBasket GherkinBasket.cpp)
target_link_libraries(example_GherkinBasket PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinBackground GherkinBackground.cpp)
target_link_libraries(example_GherkinBackground PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinTagsAndHooks GherkinTagsAndHooks.cpp)
target_link_libraries(example_GherkinTagsAndHooks PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinUnmatchedStep gherkin/GherkinUnmatchedStep.cpp)
target_link_libraries(example_GherkinUnmatchedStep PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinCollectFailures gherkin/GherkinCollectFailures.cpp)
target_link_libraries(example_GherkinCollectFailures PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinPlaceholders gherkin/GherkinPlaceholders.cpp)
target_link_libraries(example_GherkinPlaceholders PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinMultiThreaded gherkin/GherkinMultiThreaded.cpp)
target_link_libraries(example_GherkinMultiThreaded PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags Threads::Threads)

add_executable(example_GherkinAdvanced gherkin/GherkinAdvanced.cpp)
target_link_libraries(example_GherkinAdvanced PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinVeryAdvanced gherkin/GherkinVeryAdvanced.cpp)
target_link_libraries(example_GherkinVeryAdvanced PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

add_executable(example_GherkinCustomFailureHandler gherkin/GherkinCustomFailureHandler.cpp)
target_link_libraries(example_GherkinCustomFailureHandler PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)

# Gherkin registry-reuse examples (StepRegistry::Merge(), shared step
# libraries reused across multiple, differently-shaped scenarios). See
# examples/gherkin/BakerySteps.hpp and examples/gherkin/LibrarySteps.hpp.
# Unlike every other Gherkin example, these load their scenario text from
# real, standalone .feature files under examples/gherkin/features/ (via
# examples/gherkin/LoadFeatureFile.hpp) instead of an embedded C++ raw
# string literal. BABYBEHAVE_GHERKIN_FEATURES_DIR is baked in at compile
# time as an absolute, CMAKE_CURRENT_SOURCE_DIR-relative path so the
# binaries can find their .feature files regardless of the working
# directory they're launched from (ctest, a bare invocation from build/, etc).
set(BABYBEHAVE_GHERKIN_FEATURES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/gherkin/features")

add_executable(example_GherkinBakeryStandardOrder gherkin/GherkinBakeryStandardOrder.cpp)
target_link_libraries(example_GherkinBakeryStandardOrder PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)
target_compile_definitions(example_GherkinBakeryStandardOrder PRIVATE BABYBEHAVE_GHERKIN_FEATURES_DIR="${BABYBEHAVE_GHERKIN_FEATURES_DIR}")

add_executable(example_GherkinBakeryAllergenSubstitution gherkin/GherkinBakeryAllergenSubstitution.cpp)
target_link_libraries(example_GherkinBakeryAllergenSubstitution PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)
target_compile_definitions(example_GherkinBakeryAllergenSubstitution PRIVATE BABYBEHAVE_GHERKIN_FEATURES_DIR="${BABYBEHAVE_GHERKIN_FEATURES_DIR}")

add_executable(example_GherkinBakeryLateCancellation gherkin/GherkinBakeryLateCancellation.cpp)
target_link_libraries(example_GherkinBakeryLateCancellation PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)
target_compile_definitions(example_GherkinBakeryLateCancellation PRIVATE BABYBEHAVE_GHERKIN_FEATURES_DIR="${BABYBEHAVE_GHERKIN_FEATURES_DIR}")

add_executable(example_GherkinLibraryStandardLending gherkin/GherkinLibraryStandardLending.cpp)
target_link_libraries(example_GherkinLibraryStandardLending PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)
target_compile_definitions(example_GherkinLibraryStandardLending PRIVATE BABYBEHAVE_GHERKIN_FEATURES_DIR="${BABYBEHAVE_GHERKIN_FEATURES_DIR}")

add_executable(example_GherkinLibraryHoldsAndReservations gherkin/GherkinLibraryHoldsAndReservations.cpp)
target_link_libraries(example_GherkinLibraryHoldsAndReservations PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)
target_compile_definitions(example_GherkinLibraryHoldsAndReservations PRIVATE BABYBEHAVE_GHERKIN_FEATURES_DIR="${BABYBEHAVE_GHERKIN_FEATURES_DIR}")

add_executable(example_GherkinLibraryOverdueFines gherkin/GherkinLibraryOverdueFines.cpp)
target_link_libraries(example_GherkinLibraryOverdueFines PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags)
target_compile_definitions(example_GherkinLibraryOverdueFines PRIVATE BABYBEHAVE_GHERKIN_FEATURES_DIR="${BABYBEHAVE_GHERKIN_FEATURES_DIR}")

# One StepRegistry, built once, fanned out to N threads (std::async) each
# running RunFeature() against a different .feature file concurrently -
# contrast with example_GherkinMultiThreaded, where every thread builds its
# own independent registry instead. Requires Threads::Threads (already
# found above for example_MultiThreaded/example_GherkinMultiThreaded).
add_executable(example_GherkinLibraryConcurrentLending gherkin/GherkinLibraryConcurrentLending.cpp)
target_link_libraries(example_GherkinLibraryConcurrentLending PRIVATE BabyBehave::BabyBehave babybehave_coverage_flags babybehave_sanitizer_flags Threads::Threads)
target_compile_definitions(example_GherkinLibraryConcurrentLending PRIVATE BABYBEHAVE_GHERKIN_FEATURES_DIR="${BABYBEHAVE_GHERKIN_FEATURES_DIR}")